ci: make publish depend on test

--- a/.github/workflows/jsr.yml
+++ b/.github/workflows/jsr.yml
@@ -6,7 +6,10 @@ on:
             - main
 
 jobs:
+    test:
+        uses: ./.github/workflows/deno.yml
     publish:
+        needs: test
         runs-on: ubuntu-latest
         permissions:
             contents: read
