ci/jsr: set permissions for test workflow

--- a/.github/workflows/jsr.yml
+++ b/.github/workflows/jsr.yml
@@ -8,6 +8,8 @@ on:
 jobs:
     test:
         uses: ./.github/workflows/deno.yml
+        permissions:
+            contents: read
     publish:
         needs: test
         runs-on: ubuntu-latest
